engine/crates/validation/tests/validation_errors/input_objects_nonempty.errors.txt
  × Syntax error:  --> 1:18
  │   |
  │ 1 | input AlsoEmpty {}
  │   |                  ^---
  │   |
  │   = expected input_value_definition
